Release 1.0.2
